fixed text aligning in footer

--- a/04-lection2/01-histogram/histogram.css
+++ b/04-lection2/01-histogram/histogram.css
@@ -1,4 +1,5 @@
 .histogram {
+    width: 100%;
     border: 1px solid var(--grey-3);
     border-radius: 8px;
     padding: 16px 24px 24px;
